--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,56 @@ header nav a:hover {
 h2 {
   margin-left: 30px;
 }
+
+*INICIA LOS ESTILOS DEL BANNER*/
+
+#banner {
+  background-color: #ffffff;
+}
+
+#banner .marco {
+  overflow: auto;
+}
+
+.banner {
+  padding-top: 100px;
+}
+
+.grup-1 {
+  width: 50%;
+  float: left;
+}
+
+.nube {
+  height: 70%;
+}
+
+.nube img {
+  width: 60%;
+  position: relative;
+  left: 20%;
+}
+
+.img-banner {
+  width: 50%;
+  padding-top: 100px;
+  float: right;
+}
+
+.img-banner img {
+  padding-right: 10%;
+  width: 85%;
+  position: relative;
+  left: 15%;
+  bottom: 0px;
+}
+
+@media screen and (max-width: 640px) {
+  .img-banner img {
+    display: none;
+  }
+  .grup-1 {
+    width: 100%;
+    padding-top: 100px;
+  }
+}
