--- a/css/style.css
+++ b/css/style.css
@@ -357,3 +357,197 @@ h2::before {
   margin-left: auto;
   margin-right: auto;
 }
+
+/* inicion de estilos experiencia */
+
+#experiencia .bloque {
+  display: table;
+  width: 100%;
+}
+
+#experiencia .marco {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  position: relative;
+}
+
+#experiencia .metros {
+  width: 200px;
+  height: 934px;
+  background-image: url(../images/pic_work_small.jpg);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: relative;
+  float: left;
+  margin-left: 5%;
+  margin-top: 90px;
+  z-index: 2;
+}
+
+@media screen and (max-width: 1050px) {
+  #experiencia .metros {
+    margin-left: 3%;
+  }
+}
+
+@media screen and (max-width: 998px) {
+  #experiencia .metros {
+    display: none;
+  }
+}
+
+#experiencia .metros span {
+  color: #d1d1d1;
+  transform: rotate(-90deg);
+  /* Safari */
+  -webkit-transform: rotate(-90deg);
+  /* Firefox */
+  -moz-transform: rotate(-90deg);
+  /* IE */
+  -ms-transform: rotate(-90deg);
+  /* Opera */
+  -o-transform: rotate(-90deg);
+  display: inline;
+  position: absolute;
+  left: -200px;
+  top: 150px;
+  font-size: 60px;
+  font-weight: 800;
+  width: 600px;
+}
+
+#experiencia .timeline {
+  float: right;
+  width: 634px;
+  height: 934px;
+  margin-top: 90px;
+  margin-left: 75px;
+  position: relative;
+  right: 10%;
+  z-index: 2;
+}
+
+@media screen and (max-width: 998px) {
+  #experiencia .timeline {
+    float: none;
+    right: 0;
+    width: 70%;
+    margin-top: 120px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 795px) {
+  #experiencia .timeline {
+    float: none;
+    width: 70%;
+    margin-top: 80px;
+    margin-left: 20%;
+    margin-right: 10%;
+  }
+}
+
+#experiencia article {
+  position: relative;
+  margin-top: 40px;
+}
+
+#experiencia article>span {
+  width: 34px;
+  height: 34px;
+  background-color: #63bc50;
+  border-radius: 34px;
+  text-align: center;
+  color: #ededed;
+  line-height: 35px;
+  font-size: 22px;
+  font-weight: 600;
+  position: absolute;
+  left: -52px;
+  top: 10px;
+}
+
+#experiencia article>p {
+  font-size: 17px;
+  line-height: 1;
+}
+
+#experiencia .line {
+  height: 2px;
+  border: none;
+  margin: 5px 0px 0px;
+  display: block;
+  background-color: #63bc50;
+  position: relative;
+}
+
+#experiencia article .line span {
+  width: 18px;
+  height: 18px;
+  background-color: #63bc50;
+  border-radius: 18px;
+  position: absolute;
+  top: -8px;
+  right: -9px;
+  display: block;
+}
+
+@media screen and (max-width: 795px) {
+  #experiencia article .line span {
+    display: none;
+  }
+}
+
+#experiencia article h3 {
+  font-size: 20px;
+  padding: 9px 0px 5px;
+  margin: 0px;
+  font-weight: 600;
+}
+
+#experiencia article h4 {
+  font-weight: 300;
+  color: #585858;
+  font-size: 16px;
+  margin: 0px;
+  padding: 0px;
+}
+
+#experiencia ul {
+  margin-top: 15px;
+  line-height: 1.4;
+  color: #454545;
+  margin: 0px;
+  padding: 0px;
+}
+
+#experiencia li {
+  list-style: none;
+}
+
+#experiencia article ul li::before {
+  content: ".";
+  font-size: 17px;
+}
+
+#experiencia .bgpipe {
+  background-color: lightsalmon;
+  display: inline-block;
+  position: absolute;
+  left: 73%;
+  top: -10px;
+  z-index: 1;
+}
+
+@media screen and (max-width: 998px) {
+  #experiencia .bgpipe  {
+    left: 65%;
+  }
+}
+
+@media screen and (max-width: 795px) {
+  #experiencia .bgpipe {
+    display: none;
+  }
+}
