--- a/css/style.css
+++ b/css/style.css
@@ -551,3 +551,150 @@ h2::before {
     display: none;
   }
 }
+
+/* inicia los estilos de portafolio*/
+
+#portafolio {
+  background-color: #000000;
+  padding-top: 90px;
+  padding-bottom: 90PX;
+}
+
+#portafolio h2 {
+  color: #ffffff;
+}
+
+.work {
+  position: relative;
+  float: left;
+  width: 31.33%;
+  margin: 1%;
+}
+
+@media screen and (max-width: 992px) {
+  .work {
+    width: 46%;
+    margin: 2%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .work {
+    width: 94%;
+    margin: 3%;
+  }
+}
+
+.image_over {
+  width: 100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s;
+  background-color: #000000;
+}
+
+.work:hover .overlay {
+  opacity: .9;
+}
+
+.overtext {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 20%;
+    left: 12%;
+    text-align: center;
+}
+
+.overtext ul {
+  padding: 0;
+}
+
+.overtext li {
+  list-style-type: none;
+  display: inline-block;
+  background: #63bc50;
+  padding: 0 5px;
+  margin-top: 5px;
+  font-size: 14px;
+  line-height: 200%;
+  border-radius: 3px;
+}
+
+.modalDialog {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0,0,0,0.8);
+  z-index: 99999;
+  opacity:0;
+  -webkit-transition: opacity 400ms ease-in;
+  -moz-transition: opacity 400ms ease-in;
+  transition: opacity 400ms ease-in;
+  pointer-events: none;
+}
+
+.modalDialog:target {
+  opacity:1;
+  pointer-events: auto;
+}
+
+.modalDialog > div {
+  width: 100%;
+  position: relative;
+  margin: 1% auto;
+  padding: 5px 20px 13px 20px;
+  border-radius: 0px;
+  color: #000000;
+  background: #fff;
+  background: -moz-linear-gradient(#fff, #999);
+  background: -webkit-linear-gradient(#fff, #999);
+  background: -o-linear-gradient(#fff, #999);
+}
+
+.close {
+  background: #606061;
+  color: #ffffff;
+  line-height: 25px;
+  position: absolute;
+  right: 15%;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  border-radius: 12px;
+  -moz-box-shadow: 1px 1px 3px #000;
+  -webkit-box-shadow: 1px 1px 3px #000;
+  box-shadow: 1px 1px 3px #000;
+  opacity: 1;
+}
+
+.close:hover {
+  background: #ff0000;
+  color: #ffffff;
+  opacity: 1;
+ }
+
+.titleModal {
+  color: red;
+}
+
+#portafolio .marco {
+  display: table;
+  width: 100%;
+}
